syntax = "proto3";

package proto;

service SampleDomain {
    rpc getText (TextRequest) returns (TextReply);
}

message TextRequest {
    string text = 1;
}

message TextReply {
    string text = 1;
}